[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-golang"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-multi"
version = "0.1.0"
description = "Certbot DNS plugin with multiple providers, using github.com/go-acme/lego"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "certbot>=1.12.0",
    "acme>=1.12.0",
    "josepy>=1.1.0"
]

[project.entry-points."certbot.plugins"]
"dns-multi" = "certbot_dns_multi._internal.dns_multi:Authenticator"

[project.optional-dependencies]
dev = [
    "black>=22.10.0",
    "flake8>=5.0.4"
]

[tool.black]
line-length = 88
